# philosophers

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  atomic_primitives.c  atomic_primitives.h  event_queue.c  event_queue.h  fork.c  fork.h  helpers.c  helpers.h  initialize_context.c  main.c  philo.c  philo.h  test.c  test_cachemisses.c  test_cachemisses2.c
benchmarking/: .gitignore  Makefile  main.cpp  test_cachemisses.c
benchmarking/linked_queue/: linked_queue.h
benchmarking/sources/: main.cpp
benchmarking/sources/linked_queue/: linked_queue.c
resources/Intra Projects Day 00 Edit_files/: application-1ee497b69d908c3797d151c80e4813284112bd00e517d901e5e19afc4caaaf71.js  application-777dfc9f8c1a5339cbae81d0055390ce4a83db6f166fb7c99b7ec69f71da626d.css
sources/: atomic_primitives.c  atomic_primitives.h  event_queue.c  event_queue.h  fork.c  fork.h  helpers.c  helpers.h  initialize_context.c  main.c  philo.c  philo.h  philo_life.c
